September 2015 5.1
  - IMAP: support Windows users
  - SSH public key: check uploaded files if in right format
  - LAM Pro:
   -> MySQL support for cron jobs


30.06.2015 5.0
  - Microsoft IE 8 no longer supported
  - Security: added CSRF protection
  - NIS net groups: user module to manage NIS net groups on user page
  - Zarafa users: allow to change display format of "Send As"
  - User list: support to filter by account status
  - Lamdaemon: update group of home directory if user's primary group changes
  - Personal: allow to add ou=addressbook subentry for users (RFE 117)
  - Unix: support auto-UID/GID with msSFU30DomainInfo
  - Windows groups: support editing of member of
  - Central time zone setting in server profile
  - LAM Pro:
   -> Cron job to notify users before password expires (PPolicy)
   -> Password Self Reset: added 389 Directory Server schema file
   -> Support for groupOfMembers (RFE 121)
   -> Rfc2307bis Unix groups: added option to force syncing with group of names


31.03.2015 4.9
  - Requires PHP 5.3.2 or higher
  - Templates for server profiles
  - Unix/Personal: support SASL as password hash type
  - PDF export: added option to print primary group members
  - Use HTTP_X_REAL_IP/HTTP_X_FORWARDED_FOR to log IP addresses (RFE 120)
  - LAM Pro:
   -> Personal: support image file size limit and cropping (requires php-imagick) in self service
   -> Password self reset: allow to enter custom security questions (RFE 115)
   -> Unix groups (rfc2307bis): allow to sync members from group of (unique) names (RFE 116)
   -> Self Service: support password change with old password (requires PHP >= 5.4.26)
  - Fixed bugs:
   -> Self Service shows password reuse error after password change was required


16.12.2014 4.8
  - Active Directory: support paged result as workaround for size limit exceeded
  - FreeRadius: support dialupAccess and radiusProfileDn
  - Usability improvements
  - LAM Pro:
   -> Self service: added option if referrals should be followed